# libsb

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build
.github/workflows/: main.yml
include/: CMakeLists.txt  libsb.h
src/: CMakeLists.txt  libsb.c
subprojects/: libgb.wrap  libutf.wrap
test-unit/: CMakeLists.txt  main.c
